Final portfolio submission

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Personal Portfolio of Your Name built with React" />
-    <meta property="og:title" content="Your Name — Portfolio" />
+    <meta property="og:title" content="My Portfolio" />
     <meta property="og:description" content="Projects, services, and contact details." />
     <link rel="icon" href="/favicon.svg" />
-    <title>Your Name — Portfolio</title>
+    <title>My Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
